Fix to paragraph spacing

--- a/src/wwwroot/css/style.css
+++ b/src/wwwroot/css/style.css
@@ -165,7 +165,11 @@ p {
     font-size: 2rem;
 }
 
-.page-section p, ul li {
+.page-section p {
+    font-size: 16px;
+}
+
+.page-section ul li {
     font-size: 16px;
     margin-bottom: 0;
 }
